# gpt2-twitch-chatter

./: README.md  pyproject.toml
bot/: Pipfile  bot.py  twitch_auth.json.example
bot/config/: Config.py
bot/model/: GPT2Model.py  GPT2Tokenizer.py  LanguageModel.py  Tokenizer.py
bot/util/: Channel.py  CustomLogger.py  EnvDefault.py  MessageHandler.py  MessageIgnorer.py  MessageQueue.py  Output.py  Pipeline.py  StringUtils.py  TensorBuilder.py  TwitchAuth.py
src/gpt2_twitch_chatter_nseguin/: clean_logs.py  parse_logs.py  tokenize_logs.py  train.py
